<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/pink">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialogwindow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/white"
        android:layout_marginHorizontal="16dp">

        <TextView
            android:id="@+id/anmeldungheader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/anmeldung"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/inputname"
            android:background="@color/black"
            android:paddingVertical="12dp"/>

        <EditText
            android:id="@+id/inputname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/brian_otto"
            app:layout_constraintTop_toBottomOf="@id/anmeldungheader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/inputpassword"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/inputpassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/passwort"
            app:layout_constraintTop_toBottomOf="@id/inputname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/forgottenpassword"
            android:layout_marginHorizontal="12dp"/>

        <TextView
            android:id="@+id/forgottenpassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/passwort_vergessen_hier_klicken"
            android:textColor="@color/link"
            app:layout_constraintTop_toBottomOf="@id/inputpassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/buttonanmelden"
            android:gravity="center"
            android:layout_marginVertical="16dp"
            />

        <TextView
            android:id="@+id/buttonanmelden"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/anmelden"
            app:layout_constraintTop_toBottomOf="@id/forgottenpassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/facebooktwitterhint"
            android:gravity="center"
            android:background="@color/darkblue"
            android:paddingVertical="12dp"
            android:textColor="@color/white"
            android:layout_marginHorizontal="12dp"
            />

        <TextView
            android:id="@+id/facebooktwitterhint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/mit_facebook_oder_twitter_account_anmelden"
            android:textColor="@color/link"
            app:layout_constraintTop_toBottomOf="@id/buttonanmelden"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/socialmediabuttoncontainer"
            android:gravity="center"
            android:layout_marginVertical="16dp"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/socialmediabuttoncontainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/facebooktwitterhint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/accountcontainer">

            <TextView
                android:id="@+id/facebookbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/facebook"
                android:background="@color/darkblue"
                android:textColor="@color/white"
                android:paddingVertical="12dp"
                android:paddingHorizontal="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="12dp"
                />

            <TextView
                android:id="@+id/twitterbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twitter"
                android:background="@color/twitterblue"
                android:textColor="@color/white"
                android:paddingVertical="12dp"
                android:paddingHorizontal="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="12dp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/accountcontainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/socialmediabuttoncontainer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@color/grey"
                android:layout_marginTop="12dp"
                android:paddingHorizontal="16dp">

                <TextView
                    android:id="@+id/createaccountlink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_anlegen"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/registerbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registrieren"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:background="#6EE227"
                    android:textColor="@color/white"
                    android:paddingVertical="16dp"
                    android:paddingHorizontal="4dp"
                    android:layout_marginVertical="8dp"
                    android:elevation="4dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>